Add class de serviço

--- a/GrupoPlennus/app/GrupoPlennus.Domain/GrupoPlennus.Domain.csproj
+++ b/GrupoPlennus/app/GrupoPlennus.Domain/GrupoPlennus.Domain.csproj
@@ -57,10 +57,14 @@
     <Compile Include="Interfaces\Services\IPessoaService.cs" />
     <Compile Include="Interfaces\Services\IServiceBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ConjugeService.cs" />
+    <Compile Include="Services\DependenteService.cs" />
+    <Compile Include="Services\EntidadeMasterService.cs" />
+    <Compile Include="Services\EntidadeService.cs" />
+    <Compile Include="Services\PessoaService.cs" />
+    <Compile Include="Services\ServiceBase.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Services\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
