--- a/GrupoPlennus/app/GrupoPlennus.Data/GrupoPlennus.Data.csproj
+++ b/GrupoPlennus/app/GrupoPlennus.Data/GrupoPlennus.Data.csproj
@@ -53,6 +53,12 @@
     <Compile Include="EntityConfig\EntidadeMasterConfig.cs" />
     <Compile Include="EntityConfig\PessoaConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ConjugeRepository.cs" />
+    <Compile Include="Repositories\DependenteRepository.cs" />
+    <Compile Include="Repositories\EntidadeMasterRepository.cs" />
+    <Compile Include="Repositories\EntidadeRepository.cs" />
+    <Compile Include="Repositories\PessoaRepository.cs" />
+    <Compile Include="Repositories\RepositoryBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GrupoPlennus.Domain\GrupoPlennus.Domain.csproj">
@@ -64,9 +70,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Repositories\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
