--- a/GrupoPlennus/app/GrupoPlennus.HabitacaoMvc/Web.config
+++ b/GrupoPlennus/app/GrupoPlennus.HabitacaoMvc/Web.config
@@ -13,7 +13,7 @@
 
 
     
-      <add name="PlennusAC" connectionString="Data Source=gjjdyr1pg2.database.windows.net;Initial Catalog=plennus;User ID= iniciativad@gjjdyr1pg2; Password=Dsk8@1602;" providerName="System.Data.SqlClient" />
+      <add name="PlennusAC" connectionString="Data Source=gjjdyr1pg2.database.windows.net;Initial Catalog=plennusac;User ID= iniciativad@gjjdyr1pg2; Password=Dsk8@1602;" providerName="System.Data.SqlClient" />
    
   </connectionStrings>
   <appSettings>
