--- a/GrupoPlennus/app/GrupoPlennus.Application/GrupoPlennus.Application.csproj
+++ b/GrupoPlennus/app/GrupoPlennus.Application/GrupoPlennus.Application.csproj
@@ -44,11 +44,13 @@
     <Compile Include="DependenteAppService.cs" />
     <Compile Include="EntidadeAppService.cs" />
     <Compile Include="EntidadeMasterAppService.cs" />
+    <Compile Include="EntidadeTiposAppService.cs" />
     <Compile Include="Interfaces\IAppServiceBase.cs" />
     <Compile Include="Interfaces\IConjugeAppService.cs" />
     <Compile Include="Interfaces\IDependenteAppService.cs" />
     <Compile Include="Interfaces\IEntidadeAppService.cs" />
     <Compile Include="Interfaces\IEntidadeMasterAppService.cs" />
+    <Compile Include="Interfaces\IEntidadeTiposAppService.cs" />
     <Compile Include="Interfaces\IPessoaAppService.cs" />
     <Compile Include="PessoaAppService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
