--- a/GrupoPlennus/app/GrupoPlennus.Domain/GrupoPlennus.Domain.csproj
+++ b/GrupoPlennus/app/GrupoPlennus.Domain/GrupoPlennus.Domain.csproj
@@ -60,9 +60,11 @@
     <Compile Include="Entities\EntidadeMaster.cs" />
     <Compile Include="Entities\EntidadeTipos.cs" />
     <Compile Include="Entities\EstadoCivil.cs" />
+    <Compile Include="Entities\FaixaSalarial.cs" />
     <Compile Include="Entities\GrauInstrucao.cs" />
     <Compile Include="Entities\Nacionalidade.cs" />
     <Compile Include="Entities\Pessoa.cs" />
+    <Compile Include="Entities\Renda.cs" />
     <Compile Include="Entities\ResidenciaAtual.cs" />
     <Compile Include="Entities\Sexo.cs" />
     <Compile Include="Entities\TipoImovel.cs" />
@@ -77,10 +79,12 @@
     <Compile Include="Interfaces\IEntidadeRepository.cs" />
     <Compile Include="Interfaces\IEntidadeTiposRepository.cs" />
     <Compile Include="Interfaces\IEstadoCivilRepository.cs" />
+    <Compile Include="Interfaces\IFaixaSalarialRepository.cs" />
     <Compile Include="Interfaces\IGrauInstrucaoRepository.cs" />
     <Compile Include="Interfaces\INacionalidadeRepository.cs" />
     <Compile Include="Interfaces\INaturalidadeRepository.cs" />
     <Compile Include="Interfaces\IPessoaRepository.cs" />
+    <Compile Include="Interfaces\IRendaRepository.cs" />
     <Compile Include="Interfaces\IRepositoryBase.cs" />
     <Compile Include="Interfaces\IResidenciaAtualRepository.cs" />
     <Compile Include="Interfaces\ISexoRepository.cs" />
@@ -95,10 +99,12 @@
     <Compile Include="Interfaces\Services\IEntidadeService.cs" />
     <Compile Include="Interfaces\Services\IEntidadeTiposService.cs" />
     <Compile Include="Interfaces\Services\IEstadoCivilService.cs" />
+    <Compile Include="Interfaces\Services\IFaixaSalarialService.cs" />
     <Compile Include="Interfaces\Services\IGrauInstrucaoService.cs" />
     <Compile Include="Interfaces\Services\INacionalidadeService.cs" />
     <Compile Include="Interfaces\Services\INaturalidadeRepository.cs" />
     <Compile Include="Interfaces\Services\IPessoaService.cs" />
+    <Compile Include="Interfaces\Services\IRendaService.cs" />
     <Compile Include="Interfaces\Services\IResidenciaAtualService.cs" />
     <Compile Include="Interfaces\Services\IServiceBase.cs" />
     <Compile Include="Interfaces\Services\ISexoService.cs" />
@@ -125,10 +131,12 @@
     <Compile Include="Services\EntidadeService.cs" />
     <Compile Include="Services\EntidadeTiposService.cs" />
     <Compile Include="Services\EstadoCivilService.cs" />
+    <Compile Include="Services\FaixaSalarialService.cs" />
     <Compile Include="Services\GrauInstrucaoService.cs" />
     <Compile Include="Services\NacionalidadeService.cs" />
     <Compile Include="Services\NaturalidadeService.cs" />
     <Compile Include="Services\PessoaService.cs" />
+    <Compile Include="Services\RendaService.cs" />
     <Compile Include="Services\ResidenciaAtualService.cs" />
     <Compile Include="Services\ServiceBase.cs" />
     <Compile Include="Services\SexoService.cs" />
